<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/adTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Large Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details" />

        <TextView
            android:id="@+id/adsdetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextDetails" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        
        <TextView
            android:id="@+id/textUsedFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/usedfilters" />
        
		<TextView
            android:id="@+id/textCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textUsedFilters"
            android:text="@string/category" />
		
		<TextView
            android:id="@+id/adCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textUsedFilters"
            android:layout_toRightOf="@+id/textCategory"
            android:text="category" />
		
		<TextView
            android:id="@+id/textArea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCategory"
            android:text="@string/area" />
       
		<TextView
            android:id="@+id/adarea"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textCategory"
            android:layout_toRightOf="@+id/textArea"
            android:text="area" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<TextView
        android:id="@+id/textStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate" />
        
		<TextView
        android:id="@+id/adStartDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ημερομηνία έναρξης" />
		
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<TextView
        android:id="@+id/textEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startDate" />
        
		<TextView
        android:id="@+id/adEndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ημερομηνία λήξης" />
		
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
		
		<TextView
        android:id="@+id/textViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/views" />
        
		<TextView
        android:id="@+id/adViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Εμφανίσεις" />
		
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		
		<TextView
        android:id="@+id/textSiteDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/siteDescription" />
        
		<TextView
        android:id="@+id/adSiteDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Πληροφορίες ιστοσελίδας" />
		
    </LinearLayout>

</LinearLayout>